# rp2040-RTOS-Template

./: CMakeLists.txt  build.bat
src/: main.c
